--- a/_sass/calendar.sass
+++ b/_sass/calendar.sass
@@ -2,7 +2,7 @@ $calendar-border: none !default
 $calendar-border-radius: $radius-small !default
 $calendar-header-background-color: $primary !default
 $calendar-days-background-color: transparent !default
-$calendar-header-days-color: $grey-lighter !default
+$calendar-header-days-color: $grey-light !default
 $calendar-date-color: $text !default
 $calendar-date-hover-background-color: $white-ter !default
 $calendar-today-background: transparent !default
