--- a/_sass/calendar.sass
+++ b/_sass/calendar.sass
@@ -10,8 +10,8 @@ $calendar-today-border-color: $primary !default
 $calendar-today-color: $primary !default
 $calendar-range-background-color: lighten($primary, 50%) !default
 $calendar-body-padding: 0 1em 1em 1em !default
-$calendar-header-days-padding: 1em 1em 0 1em !default
-$calendar-header-padding: 1em .5em !default
+$calendar-header-padding: 1em 1em 0 1em !default
+$calendar-header-nav-padding: 1em .5em !default
 
 =css3-prefix($property, $value)
   -webkit-#{$property}: #{$value}
@@ -42,7 +42,7 @@ $calendar-header-padding: 1em .5em !default
       align-items: center
       justify-content: space-between
       font-size: $size-5
-      padding: $calendar-header-padding
+      padding: $calendar-header-nav-padding
       .calendar-nav-left, .calendar-nav-right
         flex-basis: auto
         flex-grow: 0
