--- a/_sass/calendar.sass
+++ b/_sass/calendar.sass
@@ -11,7 +11,7 @@ $calendar-today-color: $primary !default
 $calendar-range-background-color: lighten($primary, 50%) !default
 $calendar-body-padding: 0 1em 1em 1em !default
 $calendar-header-padding: 1em 1em 0 1em !default
-$calendar-header-nav-padding: 1em .5em !default
+$calendar-header-nav-padding: .5em !default
 $calendar-date-padding: .4rem 0 !default
 
 =css3-prefix($property, $value)
