--- a/components/carousel.html
+++ b/components/carousel.html
@@ -4,7 +4,7 @@ description: Display a Image / Content carousel
 layout: documentation
 doc-tab: components
 doc-subtab: carousel
-npm-version: 0.2.5
+npm-version: 0.2.6
 variables:
 - name: $carousel-nav-background
   value: rgba($white, 0.7)
@@ -20,6 +20,37 @@ variables:
 
 {% capture carousel_example %}
 <div class='carousel'>
+  <div class='carousel-container'>
+    <div class='carousel-content carousel-animate carousel-animate-slide'>
+      <div class='carousel-item'>
+        <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
+        <div class="title">Merry Christmas</div>
+      </div>
+      <div class='carousel-item'>
+        <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
+        <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
+      </div>
+      <div class='carousel-item'>
+        <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
+        <div class="title">Sushi time</div>
+      </div>
+      <div class='carousel-item'>
+        <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
+        <div class="title">Life</div>
+      </div>
+    </div>
+    <div class="carousel-nav-left">
+      <i class="fa fa-chevron-left" aria-hidden="true"></i>
+    </div>
+    <div class="carousel-nav-right">
+      <i class="fa fa-chevron-right" aria-hidden="true"></i>
+    </div>
+  </div>
+</div>
+{% endcapture %}
+
+{% capture carousel_autoplay_example %}
+<div class='carousel' data-autoplay="true">
   <div class='carousel-container'>
     <div class='carousel-content carousel-animate carousel-animate-slide'>
       <div class='carousel-item'>
@@ -198,6 +229,12 @@ variables:
 
     <hr>
     {% include snippet.html content=carousel_example size="one-half" more=true %}
+    <hr>
+
+    <hr>
+    <p>You can set carouselto autoPlay by adding <code>data-autoplay="true"</code>'s attribute to the carousel element.</p>
+    <p>Manage the delay between slides by adding <code>data-delay="5000"</code>'s attribute (default value is 5s).</p>
+    {% include snippet.html content=carousel_autoplay_example size="one-half" more=true %}
     <hr>
     <div class="message is-warning">
       <div class="message-body">
