Fix use of link for navigation

--- a/components/steps.html
+++ b/components/steps.html
@@ -3,7 +3,7 @@ title: Steps
 layout: documentation
 doc-tab: components
 doc-subtab: steps
-npm-version: 0.1.5
+npm-version: 0.1.7
 variables:
 - name: $steps-maker-default-color
   value: $grey-light
@@ -197,10 +197,10 @@ variables:
   </div>
   <div class="steps-actions">
     <div class="steps-action">
-      <button data-nav="previous" class="button is-light">previous</button>
+      <a href="#" data-nav="previous" class="button is-light">previous</a>
     </div>
     <div class="steps-action">
-      <button data-nav="next" class="button is-light">Next</button>
+      <a href="#" data-nav="next" class="button is-light">Next</a>
     </div>
   </div>
 </div>
