--- a/components/accordion.html
+++ b/components/accordion.html
@@ -11,9 +11,8 @@ npm-version: 0.1.8
 {% capture accordion_example %}
 <section class="accordions">
   <article class="accordion is-active">
-    <div class="accordion-header">
+    <div class="accordion-header toggle">
       <p>Hello World</p>
-      <button class="toggle" aria-label="toggle"></button>
     </div>
     <div class="accordion-content">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
