--- a/components/carousel.html
+++ b/components/carousel.html
@@ -4,7 +4,7 @@ description: Display a Image / Content carousel
 layout: documentation
 doc-tab: components
 doc-subtab: carousel
-npm-version: 0.2.7
+npm-version: 0.2.9
 variables:
 - name: $carousel-nav-background
   value: rgba($white, 0.7)
@@ -19,26 +19,88 @@ variables:
 {% include subnav-components.html %}
 
 {% capture carousel_example %}
-<div class='carousel'>
+<div class='carousel carousel-animated carousel-animate-slide'>
   <div class='carousel-container'>
-    <div class='carousel-content carousel-animate carousel-animate-slide'>
-      <div class='carousel-item'>
-        <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
-        <div class="title">Merry Christmas</div>
-      </div>
-      <div class='carousel-item'>
-        <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
-        <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
-      </div>
-      <div class='carousel-item'>
-        <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
-        <div class="title">Sushi time</div>
-      </div>
-      <div class='carousel-item'>
-        <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
-        <div class="title">Life</div>
-      </div>
+    <div class='carousel-item is-active'>
+      <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
+      <div class="title">Merry Christmas</div>
     </div>
+    <div class='carousel-item'>
+      <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
+      <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
+    </div>
+    <div class='carousel-item'>
+      <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
+      <div class="title">Sushi time</div>
+    </div>
+    <div class='carousel-item'>
+      <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
+      <div class="title">Life</div>
+    </div>
+  </div>
+  <div class="carousel-navigation">
+    <div class="carousel-nav-left">
+      <i class="fa fa-chevron-left" aria-hidden="true"></i>
+    </div>
+    <div class="carousel-nav-right">
+      <i class="fa fa-chevron-right" aria-hidden="true"></i>
+    </div>
+  </div>
+</div>
+{% endcapture %}
+
+{% capture carousel_navigation_centered_example %}
+<div class='carousel carousel-animated carousel-animate-slide'>
+  <div class='carousel-container'>
+    <div class='carousel-item is-active'>
+      <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
+      <div class="title">Merry Christmas</div>
+    </div>
+    <div class='carousel-item'>
+      <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
+      <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
+    </div>
+    <div class='carousel-item'>
+      <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
+      <div class="title">Sushi time</div>
+    </div>
+    <div class='carousel-item'>
+      <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
+      <div class="title">Life</div>
+    </div>
+  </div>
+  <div class="carousel-navigation is-centered">
+    <div class="carousel-nav-left">
+      <i class="fa fa-chevron-left" aria-hidden="true"></i>
+    </div>
+    <div class="carousel-nav-right">
+      <i class="fa fa-chevron-right" aria-hidden="true"></i>
+    </div>
+  </div>
+</div>
+{% endcapture %}
+
+{% capture carousel_navigation_overlay_example %}
+<div class='carousel carousel-animated carousel-animate-slide'>
+  <div class='carousel-container'>
+    <div class='carousel-item is-active'>
+      <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
+      <div class="title">Merry Christmas</div>
+    </div>
+    <div class='carousel-item'>
+      <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
+      <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
+    </div>
+    <div class='carousel-item'>
+      <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
+      <div class="title">Sushi time</div>
+    </div>
+    <div class='carousel-item'>
+      <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
+      <div class="title">Life</div>
+    </div>
+  </div>
+  <div class="carousel-navigation is-overlay">
     <div class="carousel-nav-left">
       <i class="fa fa-chevron-left" aria-hidden="true"></i>
     </div>
@@ -50,26 +112,26 @@ variables:
 {% endcapture %}
 
 {% capture carousel_autoplay_example %}
-<div class='carousel' data-autoplay="true">
+<div class='carousel carousel-animated carousel-animate-slide' data-autoplay="true">
   <div class='carousel-container'>
-    <div class='carousel-content carousel-animate carousel-animate-slide'>
-      <div class='carousel-item'>
-        <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
-        <div class="title">Merry Christmas</div>
-      </div>
-      <div class='carousel-item'>
-        <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
-        <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
-      </div>
-      <div class='carousel-item'>
-        <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
-        <div class="title">Sushi time</div>
-      </div>
-      <div class='carousel-item'>
-        <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
-        <div class="title">Life</div>
-      </div>
+    <div class='carousel-item is-active'>
+      <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
+      <div class="title">Merry Christmas</div>
     </div>
+    <div class='carousel-item'>
+      <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
+      <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
+    </div>
+    <div class='carousel-item'>
+      <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
+      <div class="title">Sushi time</div>
+    </div>
+    <div class='carousel-item'>
+      <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
+      <div class="title">Life</div>
+    </div>
+  </div>
+  <div class="carousel-navigation is-centered">
     <div class="carousel-nav-left">
       <i class="fa fa-chevron-left" aria-hidden="true"></i>
     </div>
@@ -81,23 +143,23 @@ variables:
 {% endcapture %}
 
 {% capture hero_carousel_example %}
-<section class="hero is-medium">
-  <div class="hero-carousel">
+<section class="hero is-medium has-carousel">
+  <div class="hero-carousel carousel-animated carousel-animate-fade">
     <div class='carousel-container'>
-      <div class='carousel-content carousel-animate carousel-animate-fade'>
-        <div class='carousel-item'>
-          <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" />
-        </div>
-        <div class='carousel-item'>
-          <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" />
-        </div>
-        <div class='carousel-item'>
-          <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" />
-        </div>
-        <div class='carousel-item'>
-          <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" />
-        </div>
+      <div class='carousel-item has-background is-active'>
+        <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" />
       </div>
+      <div class='carousel-item has-background'>
+        <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" />
+      </div>
+      <div class='carousel-item has-background'>
+        <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" />
+      </div>
+      <div class='carousel-item has-background'>
+        <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" />
+      </div>
+    </div>
+    <div class="carousel-navigation is-overlay">
       <div class="carousel-nav-left">
         <i class="fa fa-chevron-left" aria-hidden="true"></i>
       </div>
@@ -177,7 +239,7 @@ variables:
 {% endcapture %}
 
 {% capture carousel_js %}
-<script type="text/javascript" src="./carousel.js"></script>
+<script type="text/javascript" src="./carousel.min.js"></script>
 {% endcapture %}
 
 
@@ -229,22 +291,25 @@ variables:
 
     <hr>
     {% include snippet.html content=carousel_example size="one-half" more=true %}
-    <hr>
 
-    <hr>
-    <p>You can set carouselto autoPlay by adding <code>data-autoplay="true"</code>'s attribute to the carousel element.</p>
+    {% include anchor.html name="Navigation" %}
+    <h4 class="subtitle">You can modify the way display the navigation conatiner</h4>
+    {% include snippet.html content=carousel_example size="one-half" more=true %}
+    <h4 class="subtitle">Centered</h4>
+    {% include snippet.html content=carousel_navigation_centered_example size="one-half" more=true %}
+    <h4 class="subtitle">Overlay</h4>
+    {% include snippet.html content=carousel_navigation_overlay_example size="one-half" more=true %}
+
+    {% include anchor.html name="AutoPlay" %}
+    <p>You can set carousel to autoPlay by adding <code>data-autoplay="true"</code>'s attribute to the carousel element.</p>
     <p>Manage the delay between slides by adding <code>data-delay="5000"</code>'s attribute (default value is 5s).</p>
     {% include snippet.html content=carousel_autoplay_example size="one-half" more=true %}
-    <hr>
-    <div class="message is-warning">
-      <div class="message-body">
-        <div class="content">
-          You can animate navigation between items by using <code>carousel-animate-slide</code> or <code>carousel-animate-fade</code> classes on carousel-content element.
-        </div>
-      </div>
-    </div>
+
+    {% include anchor.html name="Animation" %}
+    <p>You can animate the carousel by using the <code>carousel-animated</code> added to <code>carousel-animate-slide</code> or <code>carousel-animate-fade</code> modifiers directly on carousel element.</p>
 
     {% include anchor.html name="Hero Carousel" %}
+    <p>You can even use carousel within <code>hero</code> by using <code>hero-carousel</code> instead of <code>carousel</code> class to the main container</p>
   </div>
 </section>
 <section class="section is-fullwidth">
@@ -258,7 +323,6 @@ variables:
     </div>
 
     <hr>
-
 
     <div class="message is-info">
       <h4 class="message-header">Javascript</h4>
@@ -276,4 +340,4 @@ variables:
   </div>
 </section>
 
-<script type="text/javascript" src="{{ site.url }}/js/carousel.min.js"></script>
+<script type="text/javascript" src="{{ site.url }}/js/carousel.js"></script>
