--- a/components/calendar.html
+++ b/components/calendar.html
@@ -196,7 +196,7 @@ document.addEventListener( 'DOMContentLoaded', function () {
 {% endcapture %}
 
 {% capture calendar_datepicker_overlay_example %}
-<input id="datepickerDemo2" class="input" type="text" value="2018/02/05">
+<input id="datepickerDemo2" class="input" type="text" value="2018-02-05">
 {% endcapture %}
 
 {% capture calendar_datepicker_modal_example %}
