Fix use of minified JS

--- a/components/accordion.html
+++ b/components/accordion.html
@@ -46,7 +46,7 @@ npm-version: 0.2.1
 {% endcapture %}
 
 {% capture accordion_js %}
-<script type="text/javascript" src="./js/accordion.js"></script>
+<script type="text/javascript" src="./js/accordion.min.js"></script>
 {% endcapture %}
 
 
