--- a/components/quickview.html
+++ b/components/quickview.html
@@ -166,4 +166,4 @@ document.addEventListener( 'DOMContentLoaded', function () {
   </div>
 </section>
 
-<script type="text/javascript" src="{{ site.url }}/js/quickview.min.js"></script>
+<script type="text/javascript" src="{{ site.url }}/node_modules/bulma-extensions/bulma-quickview/dist/bulma-quickview.min.js"></script>
