--- a/components/accordion.html
+++ b/components/accordion.html
@@ -113,4 +113,4 @@ npm-version: 0.2.1
   </div>
 </section>
 
-<script type="text/javascript" src="{{ site.url }}/js/accordion.min.js"></script>
+<script type="text/javascript" src="{{ site.url }}/node_modules/bulma-extensions/bulma-accordion/dist/bulma-accordion.min.js"></script>
