--- a/components/carousel.html
+++ b/components/carousel.html
@@ -388,4 +388,4 @@ variables:
   </div>
 </section>
 
-<script type="text/javascript" src="{{ site.url }}/js/carousel.js"></script>
+<script type="text/javascript" src="{{ site.url }}/node_modules/bulma-extensions/bulma-carousel/dist/bulma-carousel.min.js"></script>
