--- a/components/steps.html
+++ b/components/steps.html
@@ -401,6 +401,6 @@ variables:
 
     <p>Thanks to <a href="https://github.com/aramvisser/bulma-steps" tagret="_blank">aramvisser</a> for the <code>marker</code> name idea and for the sizes mixin declaration (which is smart).</p>
 
-    <script type="text/javascript" src="{{ site.url }}/js/steps.min.js"></script>
+    <script type="text/javascript" src="{{ site.url }}/node_modules/bulma-extensions/bulma-steps/dist/bulma-steps.min.js"></script>
   </div>
 </section>
