--- a/components/carousel.html
+++ b/components/carousel.html
@@ -276,7 +276,7 @@ variables:
 {% endcapture %}
 
 {% capture carousel_js %}
-<script type="text/javascript" src="./carousel.min.js"></script>
+<script type="text/javascript" src="/node_modules/bulma-extensions/bulma-carousel/dist/bulma-carousel.min.js"></script>
 {% endcapture %}
 
 
