--- a/components/calendar.html
+++ b/components/calendar.html
@@ -122,11 +122,11 @@ document.addEventListener( 'DOMContentLoaded', function () {
       <div class="calendar-date"><button class="date-item">13</button></div>
       <div class="calendar-date"><button class="date-item">14</button></div>
       <div class="calendar-date"><button class="date-item">15</button></div>
-      <div class="calendar-date calendar-range range-start"><button class="date-item is-active">16</button></div>
+      <div class="calendar-date calendar-range calendar-range-start"><button class="date-item is-active">16</button></div>
       <div class="calendar-date calendar-range"><button class="date-item">17</button></div>
       <div class="calendar-date calendar-range"><button class="date-item">18</button></div>
       <div class="calendar-date calendar-range"><button class="date-item">19</button></div>
-      <div class="calendar-date calendar-range range-end"><button class="date-item is-active">20</button></div>
+      <div class="calendar-date calendar-range calendar-range-end"><button class="date-item is-active">20</button></div>
       <div class="calendar-date"><button class="date-item">21</button></div>
       <div class="calendar-date"><button class="date-item">22</button></div>
       <div class="calendar-date"><button class="date-item">23</button></div>
@@ -205,11 +205,11 @@ document.addEventListener( 'DOMContentLoaded', function () {
       <div class="calendar-date"><button class="date-item">13</button></div>
       <div class="calendar-date"><button class="date-item">14</button></div>
       <div class="calendar-date"><button class="date-item">15</button></div>
-      <div class="calendar-date calendar-range range-start"><button class="date-item is-active">16</button></div>
+      <div class="calendar-date calendar-range calendar-range-start"><button class="date-item is-active">16</button></div>
       <div class="calendar-date calendar-range"><button class="date-item">17</button></div>
       <div class="calendar-date calendar-range"><button class="date-item">18</button></div>
       <div class="calendar-date calendar-range"><button class="date-item">19</button></div>
-      <div class="calendar-date calendar-range range-end">
+      <div class="calendar-date calendar-range calendar-range-end">
         <button class="date-item is-active">20</button>
         <div class="calendar-events">
           <a class="calendar-event is-success">Success event</a>
